--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Preventivatore Studio - Avanzato</title>
+    <title>Configuratore album </title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/js/all.min.js"></script>
     <style>
@@ -33,8 +33,8 @@
         <!-- HEADER -->
         <div class="lg:col-span-12 flex flex-col md:flex-row justify-between items-center mb-2 no-print gap-4">
             <div>
-                <h1 class="text-2xl font-bold text-slate-900">Preventivatore Studio</h1>
-                <p class="text-sm text-slate-500">Calcolo margini e preventivo clienti</p>
+                <h1 class="text-2xl font-bold text-slate-900">Configuratore album</h1>
+                <p class="text-sm text-slate-500">Release v1 - note : 28/11/25</p>
             </div>
             
             <div class="flex gap-4">
